namespaces/live.cloud-platform.service.justice.gov.uk/cica-review-case-documents-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cica-review-case-documents-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "CICA"
    cloud-platform.justice.gov.uk/slack-channel: "cica-transformation-acceleration"
    cloud-platform.justice.gov.uk/application: "Review case documents"
    cloud-platform.justice.gov.uk/owner: "cica-review-case-documents: infrastructure@cica.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cica-review-case-documents"
    cloud-platform.justice.gov.uk/team-name: "cica-review-case-documents"
    cloud-platform.justice.gov.uk/review-after: ""
